fix wrapping

--- a/app/src/Project.css
+++ b/app/src/Project.css
@@ -1,7 +1,7 @@
 #landing {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
